@@ -1,6 +1,8 @@
 Release ...
 * otfdump: Kerning information was omitted for all but the first font when
   multiple font file arguments were given. This has been fixed.
+* troff: Fonts that contain possible ligatures (fi, fl, etc.) in their file
+  names are now mounted correctly.
 
 Release 051011
 * troff/dpost: Support for OpenType fonts has been added. This includes
